[gd_scene load_steps=3 format=3 uid="uid://ceoa3gp32x1b8"]

[ext_resource type="Script" path="res://src/ui/audio.gd" id="1_atx2h"]

[sub_resource type="LabelSettings" id="LabelSettings_h1nyh"]

[node name="audio" type="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
script = ExtResource("1_atx2h")

[node name="music" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Music" type="Label" parent="music"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Musik"
label_settings = SubResource("LabelSettings_h1nyh")

[node name="music_slider" type="HSlider" parent="music"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="sfx" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Sfx" type="Label" parent="sfx"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Efek Suara"

[node name="sfx_slider" type="HSlider" parent="sfx"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="confirm" type="Button" parent="."]
layout_mode = 2
text = "Konfirmasi"

[connection signal="value_changed" from="music/music_slider" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="sfx/sfx_slider" to="." method="_on_sound_volume_value_changed"]
[connection signal="pressed" from="confirm" to="." method="_on_done_pressed"]
